unpackaged/main/default/objects/GC_Vendor_Order_Task__c/GC_Vendor_Order_Task__c.object-meta.xml
<CustomObject>
    <description>GES Connect (GC) Vendor Order Task Custom Object. This Object is used to identify Vendor Order Task details to be performed in a GES Connect Show.</description>
    <label>Vendor Order Task</label>
    <nameField>
        <displayFormat>VOT-{0000}</displayFormat>
        <label>Vendor Order Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Order Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>