unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Area_Description__c.field-meta.xml
<CustomField>
    <fullName>Area_Description__c</fullName>
    <formula>Order__r.Order_Area_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Description</label>
    <type>Text</type>
</CustomField>