unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <formula>Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>