unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Delivery_Location_Formula__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Formula__c</fullName>
    <formula>Order__r.Booth_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Location</label>
    <type>Text</type>
</CustomField>