unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Delivery_Location_Ven__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Ven__c</fullName>
    <label>Delivery Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>