unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/GESOrderTask2__c.field-meta.xml
<CustomField>
    <fullName>GESOrderTask2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the GES Order Task associated with this vendor order task.</description>
    <inlineHelpText>Lookup to the GES Order Task associated with this vendor order task.</inlineHelpText>
    <label>GES Order Task 2</label>
    <referenceTo>GC_GES_Order_Task__c</referenceTo>
    <relationshipLabel>GES Order Tasks</relationshipLabel>
    <relationshipName>GES_Order_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>