unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Last_Revision__c.field-meta.xml
<CustomField>
    <fullName>Last_Revision__c</fullName>
    <label>Last Revision</label>
    <type>Date</type>
</CustomField>