unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the GES Order associated with this vendor order task.</description>
    <inlineHelpText>Lookup to the GES Order associated with this vendor order task.</inlineHelpText>
    <label>Delivery Location</label>
    <referenceTo>GC_Order__c</referenceTo>
    <relationshipLabel>Vendor Order Tasks</relationshipLabel>
    <relationshipName>Vendor_Order_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>