unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Previous_Revision__c.field-meta.xml
<CustomField>
    <fullName>Previous_Revision__c</fullName>
    <label>Previous Revision</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>