unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Removal_Date_Time_Ven__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date_Time_Ven__c</fullName>
    <label>Removal Date/Time</label>
    <type>DateTime</type>
</CustomField>