unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Revision</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>