unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/SA_Venue_Location_Ven__c.field-meta.xml
<CustomField>
    <fullName>SA_Venue_Location_Ven__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GC_Show_Attribute__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Venue Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GC_Show_Attribute__c</referenceTo>
    <relationshipLabel>Vendor Order Tasks (Venue Location)</relationshipLabel>
    <relationshipName>Vendor_Order_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>