unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/SelectAllOrderTasks__c.field-meta.xml
<CustomField>
    <fullName>SelectAllOrderTasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select All Order Tasks</label>
    <type>Checkbox</type>
</CustomField>