unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Service_Type4__c.field-meta.xml
<CustomField>
    <fullName>Service_Type4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Type of Vendor Show Services as setup by the account manager.</description>
    <inlineHelpText>Type of Vendor Show Services as setup by the account manager.</inlineHelpText>
    <label>Service Type 4</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GC_Show_Attribute__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Show Service</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GC_Show_Attribute__c</referenceTo>
    <relationshipLabel>Vendor Order Tasks</relationshipLabel>
    <relationshipName>Vendor_Order_Tasks4</relationshipName>
    <type>Lookup</type>
</CustomField>