unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <formula>IF(NOT(ISBLANK(Service_Type__c)), Service_Type__r.Name, &#39;&#39;) +
IF(NOT(ISBLANK(Service_Type2__c)),&#39;, &#39; + Service_Type2__r.Name, &#39;&#39;) +
IF(NOT(ISBLANK(Service_Type3__c)),&#39;, &#39; + Service_Type3__r.Name, &#39;&#39;) +
IF(NOT(ISBLANK(Service_Type4__c)),&#39;, &#39; + Service_Type4__r.Name, &#39;&#39;) +
IF(NOT(ISBLANK(Service_Type5__c)),&#39;, &#39; + Service_Type5__r.Name, &#39;&#39;)</formula>
    <label>Services</label>
    <type>Text</type>
</CustomField>