unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <formula>Order__r.Show_Name__c</formula>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>