unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date sent to the vendor.</description>
    <inlineHelpText>Date sent to the vendor.</inlineHelpText>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>