unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Vendor3__c.field-meta.xml
<CustomField>
    <fullName>Vendor3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Vendor Community user.</description>
    <inlineHelpText>Lookup to the Vendor Community user to get notified of this task.</inlineHelpText>
    <label>Vendor 3</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendor_Order_Tasks3</relationshipName>
    <type>Lookup</type>
</CustomField>