unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Vendor4__c.field-meta.xml
<CustomField>
    <fullName>Vendor4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Vendor Community user.</description>
    <inlineHelpText>Lookup to the Vendor Community user to get notified of this task.</inlineHelpText>
    <label>Vendor 4</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendor_Order_Tasks4</relationshipName>
    <type>Lookup</type>
</CustomField>