unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Vendor_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Instructions__c</fullName>
    <description>Instructions to the Vendor.</description>
    <inlineHelpText>Instructions to the Vendor indicating services needed.</inlineHelpText>
    <label>Vendor Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>