unpackaged/main/default/objects/GC_Vendor_Order_Task__c/fields/Vendors__c.field-meta.xml
<CustomField>
    <fullName>Vendors__c</fullName>
    <formula>IF(NOT(ISBLANK(Vendor__c)), Vendor__r.FirstName + &#39; &#39; + Vendor__r.LastName, &#39;&#39;) +
IF(NOT(ISBLANK(Vendor2__c)),&#39;, &#39; + Vendor2__r.FirstName + &#39; &#39; + Vendor2__r.LastName, &#39;&#39;) +
IF(NOT(ISBLANK(Vendor3__c)),&#39;, &#39; + Vendor3__r.FirstName + &#39; &#39; + Vendor3__r.LastName, &#39;&#39;) +
IF(NOT(ISBLANK(Vendor4__c)),&#39;, &#39; + Vendor4__r.FirstName + &#39; &#39; + Vendor4__r.LastName, &#39;&#39;) +
IF(NOT(ISBLANK(Vendor5__c)),&#39;, &#39; + Vendor5__r.FirstName + &#39; &#39; + Vendor5__r.LastName, &#39;&#39;)</formula>
    <label>Vendors</label>
    <type>Text</type>
</CustomField>